@startuml Space-Invaders

class Jugador
{
    -vida:int
    -velocidad:int
    -vidaText:Text
    -fuente:font
    -Fuente:font
    -sprite:Sprite
    +Disparar()
    +Posicion()
    +QuitarVida()
    +Vivo()
    +Update()
    +UpdateVida()
    +Draw()
    +Pos()
}


class Bala
{
    -sprite:Sprite
    -velocidad:int
    +Update()
    +Pos()
    +Draw()

}

class Enemigo
{
   -sprite:Sprite
   -vel:int
   -state:int
   -cadencia:int
   -timer:int
   -point:Vector2f
   +Update()
   +Pos()
   +ChangeDir()
   +Pos()
   +AumentarCadencia()
   +Draw()


}

class Muro
{
    -estado:vector pair
    -state:int
    +Pos()
    +Update()
    +Colision()
    +Draw()

     
}


class Menu{
    -font:Font  
    -menu:Text
    selectedItemIndex:int
    +Menu()
    +Draw()
    +MoveUp()
    +MoveDown()
    +GetPressedItem()


}


Jugador "1" o-- "*" Bala
Enemigo "1" o-- "*" Bala
Jugador "1" o-- "3" Muro
Jugador "1" *-- "*" Enemigo
Menu "1" --* "*" Jugador
Enemigo <|-- Drawable
Muro <|-- Drawable
Bala <|-- Drawable
Jugador <|-- Drawable









@enduml